update the readme

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>24小时一圈的表</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../calcnew.js"></script>
+    <script src="./calcnew.js"></script>
   </head>
   <body>
     <div class="clocks">
