--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       ctx.restore();
       // draw hour
       ctx.save();
-      var theta = ((nowTime.hs - 6) * 2 * Math.PI) / 24;
+      var theta = ((nowTime.h - 6) * 2 * Math.PI) / 24;
       ctx.rotate(theta);
       ctx.beginPath();
       ctx.moveTo(-15, -5);
